Fix T99820: missing 'no more mising' tagging on reloaded libraries.

Backport of rB4d8018948ddb for 2.93 LTS.